# shared_dm

./: CMakeLists.txt  package.xml
config/: bi_tino_simple_factory_dual_manipulation.yaml  dual_manipulation.yaml  factory_dual_manipulation.yaml  gazebo_simple_grasp_dual_manipulation.yaml  simple_factory_dual_manipulation.yaml  vito_dual_manipulation.yaml
grasp_storage/: convert_RH_to_LH_grasps.cpp  convert_ik_from_legacy.cpp  grasp_storage.cpp  grasp_storage.h  main.cpp  make_table_grasps.cpp  table_grasp_data.txt
include/dual_manipulation_shared/: databasemapper.h  databasewriter.h  geometry_tools.h  grasp.h  ik_control_capabilities.h  locked_object.h  node_transitions.h  object.h  parsing_utils.h  serialization_utils.h  stream_utils.h
launch/: dual_manipulation.launch  factory_display.launch  simple_factory_display.launch
model/: bi_tino_simple_factory.urdf.xacro  conveyor_belt.urdf.xacro  factory.urdf.xacro  robin.urdf.xacro  shelf.urdf.xacro  simple_factory.urdf.xacro  tinoBot.urdf.xacro  tinoBot_bad_wheels.urdf.xacro
msg/: good_grasp_msg.msg  graph.msg  grasp_trajectory.msg  ik_response.msg  pe.msg  peArray.msg  planner_item.msg
src/: create_grasp_from_file.cpp  databasemapper.cpp  databasewriter.cpp  geometry_tools.cpp  main.cpp  node_transitions.cpp  parsing_utils.cpp  serialization_utils.cpp
src/lemon/: CMakeLists.txt  graph_to_eps.h
srv/: estimate.srv  gui_target_service.srv  ik_service.srv  ik_service_legacy.srv  planner_service.srv  scene_object_service.srv  start_tracker.srv  state_manager_service.srv
test/: CMakeLists.txt  convert_RH_to_LH_grasps.cpp  convert_ik_from_legacy.cpp  test_create_grasp_transitions.cpp  test_deserialization.cpp  test_locked_object.cpp  test_serialization.cpp
