<package>
  <name>dual_manipulation_shared</name>
  <version>0.8.4</version>
  <description>
     Dual Manipulation Shared
  </description>
  <maintainer email="mirko.ferrati@gmail.com">Mirko Ferrati</maintainer>
  <license>BSD</license>

  <author>Mirko Ferrati</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pacman_vision_comm</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>pacman_vision_comm</run_depend>
</package>
